--- a/assest/css/global.css
+++ b/assest/css/global.css
@@ -7,6 +7,15 @@
   font-family: "Outfit", sans-serif;
 }
 
+html {
+  font-size: var(--p-size);
+}
+
 :root {
   --p-size: 18px;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
 }
