--- a/assest/css/body.css
+++ b/assest/css/body.css
@@ -1,8 +1,102 @@
 body {
   background: var(--main-bg);
   height: 100vh;
+  margin: 0 auto;
+  display: grid;
+  justify-content: center;
+  align-items: center;
 }
 
+/* NFT CARD*/
 #nft-card {
+  background: var(--card-bg);
+  max-width: 320px;
+  border-radius: 10px;
+  padding: 25px;
   display: grid;
+  gap: 18.5px;
+}
+
+#nft-img img {
+  border-radius: 10px;
+}
+
+h1 {
+  color: var(--white);
+  font-size: 1.05rem;
+  letter-spacing: 1.1px;
+}
+
+p {
+  color: var(--soft-blue);
+  font-size: 0.86rem;
+  line-height: 1.3;
+  font-weight: 200;
+}
+
+#price-days {
+  display: flex;
+  justify-content: space-between;
+}
+
+.price {
+  color: var(--cyan);
+  font-weight: 600;
+  font-size: 0.8rem;
+  letter-spacing: 1.2px;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+
+.price::before {
+  content: "";
+  display: inline-block;
+  background: url(../images/icon-ethereum.svg) no-repeat center;
+  height: 18px;
+  width: 10px;
+}
+
+.days {
+  color: var(--soft-blue);
+  font-size: 0.8rem;
+  display: flex;
+  gap: 5px;
+  align-items: center;
+}
+
+.days::before {
+  content: "";
+  display: inline-block;
+  background: url(../images/icon-clock.svg) center no-repeat;
+  height: 13px;
+  width: 13px;
+}
+
+.creator {
+  display: flex;
+  gap: 13px;
+  border-top: 1px solid var(--line);
+  padding-top: 15px;
+}
+
+.creator-img {
+  max-width: 40px;
+  max-height: 40px;
+  border-radius: 50%;
+  border: 2px solid var(--white);
+}
+
+.creator-img img {
+  height: 100%;
+}
+
+span {
+  align-self: center;
+  color: var(--soft-blue);
+  font-size: 0.8rem;
+}
+
+span a {
+  color: var(--white);
 }
